--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,21 +10,21 @@ on:
     types: [published]
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  group: ${{ github.workflow }}-${{ github.event.pull_request ? github.event.pull_request.number : github.ref }}
   cancel-in-progress: true
 
 jobs:
   build-and-publish-image:
     runs-on: buildjet-4vcpu-ubuntu-2204
     if: |
-      (github.event_name == 'release' && github.event.action == 'published') ||
+      (github.event_name == 'release' && github.event.release.action == 'published') ||
       github.ref == 'refs/heads/main' ||
       (github.event_name == 'pull_request' &&
       github.event.pull_request.head.repo.full_name == github.repository)
     steps:
       - uses: actions/checkout@v3
 
-      - name: Build and push Fuel Explorer Graphql image
+      - name: Build and push Docker image
         uses: ./.github/actions/docker-publish
         id: publish
         with:
